[package]
name = "vixen"
description = "A voxel world generation engine."
version = "0.0.0"
edition = "2021"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
homepage = "https://git.wolvesin.space/WolvesInSpace/vixen"
license = "MIT OR Apache-2.0"
keywords = ["voxel", "voxel-worldgen"]
categories = ["game-development", "game-engines", "data-structures"]

[dependencies]

